welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
  moitf()
}
def bgmotif(c:Color){
  setCouleurBrosse(c)
  avance()
  baisseBrosse()
  leveBrosse()
  gauche()
  avance()
  gauche()
}
def bdmotif(c:Color){
  setCouleurBrosse(c)
  baisseBrosse()
  leveBrosse()
  avance()
  gauche()
  avance()
  gauche()  
}

def motif(){
  bgmotif(Color.red)
  bgmotif(Color.red)
  avance()
  avance()
  bgmotif(Color.blue)
  bgmotif(Color.blue)
  gauche()
  avance()
  avance()
  droite()
  bgmotif(Color.green)
  bgmotif(Color.green)
  recule()
  recule()
  bgmotif(Color.yellow)
  bgmotif(Color.yellow)
  droite()
  avance()
  gauche()
}